unpackaged/main/default/objects/SWOT_Action_3rd_Quarter__c/SWOT_Action_3rd_Quarter__c.object-meta.xml
<CustomObject>
    <label>SWOT Action 3rd Quarter</label>
    <nameField>
        <displayFormat>SWA3_{00000}</displayFormat>
        <label>SWOT Action 3rd Quarter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOT Actions 3rd Quarter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>