unpackaged/main/default/objects/SWOT_Action_3rd_Quarter__c/fields/Action_3rd_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Action_3rd_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action 3rd Quarter</label>
    <referenceTo>Action_3rd_Quarter__c</referenceTo>
    <relationshipLabel>SWOTs</relationshipLabel>
    <relationshipName>SWOT_Actions_3rd_Quarter</relationshipName>
    <type>Lookup</type>
</CustomField>