unpackaged/main/default/objects/SWOT_Action_3rd_Quarter__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <formula>Action_3rd_Quarter__r.Action__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>