unpackaged/main/default/objects/SWOT_Action_3rd_Quarter__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>Action_3rd_Quarter__r.Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>