unpackaged/main/default/objects/SWOT_Action_3rd_Quarter__c/fields/SWOT__c.field-meta.xml
<CustomField>
    <fullName>SWOT__c</fullName>
    <label>SWOT</label>
    <referenceTo>SWOT__c</referenceTo>
    <relationshipLabel>Actions 3rd Quarter</relationshipLabel>
    <relationshipName>SWOT_Actions_3rd_Quarter</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>