unpackaged/main/default/objects/SWOT_Action_3rd_Quarter__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <formula>TEXT(Action_3rd_Quarter__r.WorkStream__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workstream</label>
    <type>Text</type>
</CustomField>