unpackaged/main/default/objects/SWOT_Action_3rd_Quarter__c/fields/Workstream_Type__c.field-meta.xml
<CustomField>
    <fullName>Workstream_Type__c</fullName>
    <formula>TEXT(Action_3rd_Quarter__r.Workstream_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workstream Type</label>
    <type>Text</type>
</CustomField>